visibility fix'

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1055,7 +1055,7 @@ footer {
 }
 
 .text-padding {
-    padding: 0.2em 0;
+    margin: 1em 0;
 }
 /* ==============================================================
    BOOKING DETAILS
